<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_login"
    android:gravity="top|center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <Button
        android:id="@+id/btnTemp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/btn_login_bg"
        android:text="@string/temperatura"
        android:textColor="@color/btn_login" />

    <Button
        android:id="@+id/btnHum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/btn_login_bg"
        android:text="@string/humedad"
        android:textColor="@color/btn_login" />

    <Button
        android:id="@+id/btnLig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/btn_login_bg"
        android:text="@string/luminosidad"
        android:textColor="@color/btn_login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRed"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dip"
            android:layout_marginRight="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/rojo"
            android:textColor="@color/btn_login"
            tools:layout_editor_absoluteY="307dp" />

        <Button
            android:id="@+id/btnBlue"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/btn_login_bg"
            android:text="@string/azul"
            android:textColor="@color/btn_login"
            tools:layout_editor_absoluteY="307dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGreen"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_marginEnd="20dip"
            android:layout_marginRight="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/verde"
            android:textColor="@color/btn_login" />

        <Button
            android:id="@+id/btnYellow"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/amarillo"
            android:textColor="@color/btn_login" />
    </LinearLayout>

    <Button
        android:id="@+id/btnOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/btn_login_bg"
        android:text="@string/apagar"
        android:textColor="@color/btn_login" />

</LinearLayout>